--- a/CA_Policy/component.yaml
+++ b/CA_Policy/component.yaml
@@ -21,7 +21,7 @@ satisfies:
   implementation_status: none
   narrative:
   - text: |
-      18F will accept the results of the Cloud.Gov assessment performed by the designated 3PAO and reviewed by the FedRAMP PMO office when the assessment meets the condtions for a Provisional ATO.
+      18F will accept the results of the cloud.gov assessment performed by the designated 3PAO and reviewed by the FedRAMP PMO office when the assessment meets the condtions for a Provisional ATO.
   standard_key: NIST-800-53
 - control_key: CA-2
   covered_by:
@@ -36,13 +36,13 @@ satisfies:
       * Assessment procedures to be used to determine security control effectiveness
       * Assessment environment, assessment team, and assessment roles and responsibilities
 
-      Cloud.Gov is designed for compliance with the Federal Risk and Authroization Management Plan and has adopted the FedRAMP Assessment and Authorization program as the basis for its Security and Priavacy compliance activities. Cloud.Gov engages a FedRAMP Accredited Third Pary Assessemt Organzation (3PAO) to develop a compliant security assessment plan.
+      cloud.gov is designed for compliance with the Federal Risk and Authroization Management Plan and has adopted the FedRAMP Assessment and Authorization program as the basis for its Security and Priavacy compliance activities. cloud.gov engages a FedRAMP Accredited Third Pary Assessemt Organzation (3PAO) to develop a compliant security assessment plan.
   - key: b
     text: |
       Cloud.gov has engaged the 3PAO to assess the security controls in the information system at least annually to determine the extent to which the controls are implemented correctly, operation as intended, and producing the desired outcome with respoect to meeting the security requirements for the system.
   - key: c
     text: |
-      Cloud.Gov has engaged the 3PAO to produce a security assessment report that documents the issues, test activities, findings, and recommendations from the assessment.
+      cloud.gov has engaged the 3PAO to produce a security assessment report that documents the issues, test activities, findings, and recommendations from the assessment.
   - key: d
     text: |
       18F will deliver all documents used in or created during the assessment to generate a complete FedRAMP Authorization package. The package is transmitted to the FedRAMP Program Management Office (PMO) for submission to the FedRAMP JAB
@@ -59,7 +59,7 @@ satisfies:
   - verification_key: POLICY_DOC
   implementation_status: none
   narrative:
-  - text: 18F has engaged an accredited 3PAO to conduct the independent assessment of security controls for the Cloud.Gov information system.
+  - text: 18F has engaged an accredited 3PAO to conduct the independent assessment of security controls for the cloud.gov information system.
   standard_key: NIST-800-53
 - control_key: CA-2 (2)
   covered_by:
@@ -80,21 +80,21 @@ satisfies:
   - verification_key: POLICY_DOC
   implementation_status: none
   narrative:
-  - text: The Cloud.Gov informaton system does not have any connections to other external information systems or interconnection security agreements (ISA) with other external agencies at this time.
+  - text: The cloud.gov informaton system does not have any connections to other external information systems or interconnection security agreements (ISA) with other external agencies at this time.
   standard_key: NIST-800-53
 - control_key: CA-3 (3)
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
   narrative:
-  - text: This control is not applicable to the Cloud.Gov information system and essentially would be inherited from the cloud infrastructure as a service level. Cloud.Gov does not connect to any other external information systems.
+  - text: This control is not applicable to the cloud.gov information system and essentially would be inherited from the cloud infrastructure as a service level. cloud.gov does not connect to any other external information systems.
   standard_key: NIST-800-53
 - control_key: CA-3 (5)
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
   narrative:
-  - text: This control is not applicable to the Cloud.Gov information system. Cloud.Gov currently does not have any connections to other external information systems.
+  - text: This control is not applicable to the cloud.gov information system. cloud.gov currently does not have any connections to other external information systems.
   standard_key: NIST-800-53
 - control_key: CA-5
   covered_by:
@@ -105,9 +105,9 @@ satisfies:
     text: |
       18F has developed a plan of action and milestones (POA&M) for the information system which documents the remediation actions to correct weaknesses found or deficiencies noted during the assessment of the security controls and to reduce or eliminate known vulnerabilities.
 
-      The majority of vulnerabilities are found during continuous monitoring activities including monthly vulnerability scanning, updates to Cloud.Gov systems components, static code analysis on applications and infrastucture and system monitoring tools. The 18F ISSOs are tasked with developing plans of actions and milestones for valid findings and vulnerabilities. The devops administrators are tasked to mitigate high findings within 30 days, moderate findings within 60 days and low findings within 120 days.
+      The majority of vulnerabilities are found during continuous monitoring activities including monthly vulnerability scanning, updates to cloud.gov systems components, static code analysis on applications and infrastucture and system monitoring tools. The 18F ISSOs are tasked with developing plans of actions and milestones for valid findings and vulnerabilities. The devops administrators are tasked to mitigate high findings within 30 days, moderate findings within 60 days and low findings within 120 days.
   - key: b
-    text: The 18F ISSOs updates the Cloud.Gov plan of action and milestones at least monthly based on the findings from security controls assessments, security impacy analysis, and continuous monitoring activites.
+    text: The 18F ISSOs updates the cloud.gov plan of action and milestones at least monthly based on the findings from security controls assessments, security impacy analysis, and continuous monitoring activites.
   standard_key: NIST-800-53
 - control_key: CA-6
   covered_by:
@@ -115,11 +115,11 @@ satisfies:
   implementation_status: none
   narrative:
   - key: a
-    text: 18F has assigned an Authorizing Official (AO) for the Cloud.Gov information system. The designated AO is listed in Section 4 of the system security plan.
+    text: 18F has assigned an Authorizing Official (AO) for the cloud.gov information system. The designated AO is listed in Section 4 of the system security plan.
   - key: b
-    text: The Authorizing Official responsibilities include ensuring the Cloud.Gov information system is assessed and authorized before going to an operational state. Authorization descisions are based on the contenct of them.
+    text: The Authorizing Official responsibilities include ensuring the cloud.gov information system is assessed and authorized before going to an operational state. Authorization descisions are based on the contenct of them.
   - key: c
-    text: 18F updates the security authorzation of Cloud.Gov on an annual basis or when there are significant changes within the information system. Significant changes include,
+    text: 18F updates the security authorzation of cloud.gov on an annual basis or when there are significant changes within the information system. Significant changes include,
   standard_key: NIST-800-53
 - control_key: CA-7
   covered_by: []
@@ -145,14 +145,14 @@ satisfies:
   - verification_key: POLICY_DOC
   implementation_status: none
   narrative:
-  - text: 18F will engage an accredited 3PAO to conduct the independent assessment of security controls for the Cloud.Gov information system on a yearly basis.
+  - text: 18F will engage an accredited 3PAO to conduct the independent assessment of security controls for the cloud.gov information system on a yearly basis.
   standard_key: NIST-800-53
 - control_key: CA-8 (1)
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
   narrative:
-  - text: GSA ISE will perform Penetration testing of the all 18F systems that are in the purview of GSA. All other penetration testing for the Cloud.Gov platform will be conducted by an Independent Third party assessor (3PAO) as requested.
+  - text: GSA ISE will perform Penetration testing of the all 18F systems that are in the purview of GSA. All other penetration testing for the cloud.gov platform will be conducted by an Independent Third party assessor (3PAO) as requested.
   standard_key: NIST-800-53
 - control_key: CA-8
   covered_by:
@@ -162,7 +162,7 @@ satisfies:
   - text: |-
       External Penetration testing
 
-      External penetration testing activities are conducted by GSA OCISO on an annual basis. These activites are designed to perform the necessary vulnerability analysis against Cloud.Gov based on all necessary security requirements. The GSA OCISO follows the GSA CIO IT Security Procedural Guide, CIO-IT Security-11-51, Conducting Penetration Test Exercises when performing these tests.
+      External penetration testing activities are conducted by GSA OCISO on an annual basis. These activites are designed to perform the necessary vulnerability analysis against cloud.gov based on all necessary security requirements. The GSA OCISO follows the GSA CIO IT Security Procedural Guide, CIO-IT Security-11-51, Conducting Penetration Test Exercises when performing these tests.
 
       18F must request permission from AWS using the AWS Vulnerability / Penetration Testing Request Form to conduct penetration test activities against its own Virtual Private Cloud infrastructure and follow the AWS Acceptable Use Policy.
       Amazon requires customers to obtain authorization for penetration testing (or vulnerability assessments) both from or to their AWS resources.
@@ -170,7 +170,7 @@ satisfies:
       AWS Acceptable Use Policy, http://aws.amazon.com/aup/
       AWS Penetration testing,  http://aws.amazon.com/security/penetration-testing/
 
-      GSA ISE performs penetration testing services for the GSA information systems hosted on the Cloud.Gov platform. It is also bound by the AWS penetration testing policy and procedures when conducting its penetration tests.
+      GSA ISE performs penetration testing services for the GSA information systems hosted on the cloud.gov platform. It is also bound by the AWS penetration testing policy and procedures when conducting its penetration tests.
 
       Internal Penetration testing
 
