--- a/SA_Policy/component.yaml
+++ b/SA_Policy/component.yaml
@@ -1,4 +1,4 @@
-schema_version: 2.0
+schema_version: 3.0.0
 documentation_complete: false
 name: System and Services Acquisition Policy for 18F
 satisfies:
@@ -6,30 +6,33 @@ satisfies:
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
-  narrative: |-
-    18F will replace information system components when support for the components is no longer available from the developer, vendor, or manufacturer; and will provide justification and documents approval for the continued use of unsupported system components required to satisfy mission/business needs.
+  narrative:
+  - text: |-
+      18F will replace information system components when support for the components is no longer available from the developer, vendor, or manufacturer; and will provide justification and documents approval for the continued use of unsupported system components required to satisfy mission/business needs.
 
-    Cloud Foundry Platform as a Service system replacement:
+      Cloud Foundry Platform as a Service system replacement:
 
-    A system & software inventory is run nightly, and the DevOps team reviews the inventory weekly to ensure that all software inventoried is accurate and currently supported. This process includes:
+      A system & software inventory is run nightly, and the DevOps team reviews the inventory weekly to ensure that all software inventoried is accurate and currently supported. This process includes:
 
-    * Verify that the software license support expiration date is not within six months. 18F uses the open source version of Cloud Foundry which uses the open source Apache 2.0 license.
-    * Ensure that the software version is still supported.
-    * Refer to the vendor's support website to verify that support does not have an \u201CEnd of Life\u201D date of less than six months.
+      * Verify that the software license support expiration date is not within six months. 18F uses the open source version of Cloud Foundry which uses the open source Apache 2.0 license.
+      * Ensure that the software version is still supported.
+      * Refer to the vendor's support website to verify that support does not have an \u201CEnd of Life\u201D date of less than six months.
 
-    Since 18F is using the open source version of Cloud Foundry, an additional task will be issued to upgrade Cloud Foundry suite to the latest versions. DevOps will review the GitHub cloudfoundry/cf-release repository for implementation of the updated version.
+      Since 18F is using the open source version of Cloud Foundry, an additional task will be issued to upgrade Cloud Foundry suite to the latest versions. DevOps will review the GitHub cloudfoundry/cf-release repository for implementation of the updated version.
   standard_key: NIST-800-53
 - control_key: SA-1
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
-  narrative: 18F Policy
+  narrative:
+  - text: 18F Policy
   standard_key: NIST-800-53
 - control_key: SA-11 (1)
   covered_by:
   - verification_key: DEPLOYMENT_TESTING
-  narrative: |-
-    The Cloud Foundry community uses Code Climate on platform components such as Bosh and Cloud Controller. The results of the scans are publicly available and can be run by 18F at any time.
+  narrative:
+  - text: |-
+      The Cloud Foundry community uses Code Climate on platform components such as Bosh and Cloud Controller. The results of the scans are publicly available and can be run by 18F at any time.
   standard_key: NIST-800-53
 system: 18F
 verifications:
