--- a/SI_Policy/component.yaml
+++ b/SI_Policy/component.yaml
@@ -10,6 +10,52 @@ satisfies:
   narrative:
   - text: 18F Policy
   standard_key: NIST-800-53
+- control_key: SI-2
+  covered_by:
+  - verification_key: POLICY_DOC
+  implementation_status: none
+  narrative:
+  - key: a
+    text: |
+      18F identifies all system flaws related to Cloud.gov, reports
+      system flaws to information system owners, Authorizing officials, DevOps and
+      SecOp  and corrects information system flaws that affect cloud.gov
+      Cloud Foundry
+      manages software vulnerability using releases and BOSH stemcells. New Cloud
+      Foundry releases are created with updates to address code issues, while new
+      stemcells are created with patches for the latest security fixes to address
+      any underlying operating system issues. New Cloud Foundry releases are located
+      at https://github.com/cloudfoundry/cf-release.
+      18F implements the release
+      of Cloud Foundry he what (or the software developer/vendor in the case of software
+      developed and maintained by a vendor/contractor) promptly installs newly released
+      security relevant patches and tests patches, for effectiveness and potential
+      side effects on information systems before installation.
+  standard_key: NIST-800-53
+- control_key: SI-2 (2)
+  covered_by:
+  - verification_key: POLICY_DOC
+  implementation_status: none
+  narrative:
+  - text: |
+      **DEFAULT_CONTROL** The 18F DevOps and SecOps teams employs automated
+      mechanisms [Assignment: organization-defined frequency] to determine the
+      state of information system components with regard to flaw remediation.
+  standard_key: NIST-800-53
+- control_key: SI-2 (3)
+  covered_by:
+  - verification_key: POLICY_DOC
+  implementation_status: none
+  narrative:
+  - key: a
+    text: |
+      **DEFAULT_CONTROL** The 18F DevOps and SecOps teams measure the time between
+      flaw identification and flaw remediation; and
+  - key: b
+    text: |
+      **DEFAULT_CONTROL** The 18F DevOps and SecOps teams establishes [Assignment:
+      organization-defined benchmarks] for taking corrective actions.
+  standard_key: NIST-800-53
 - control_key: SI-4
   covered_by:
   - verification_key: POLICY_DOC
@@ -60,28 +106,6 @@ satisfies:
       reports will be provided for events such as after-hours administrative logins,
       users being added to privileged groups, persistent malware detections, etc.
       to designated members of the DevOps teams and SecOps teams as needed.
-  standard_key: NIST-800-53
-- control_key: SI-2
-  covered_by:
-  - verification_key: POLICY_DOC
-  implementation_status: none
-  narrative:
-  - key: a
-    text: |
-      18F identifies all system flaws related to Cloud.gov, reports
-      system flaws to information system owners, Authorizing officials, DevOps and
-      SecOp  and corrects information system flaws that affect cloud.gov
-      Cloud Foundry
-      manages software vulnerability using releases and BOSH stemcells. New Cloud
-      Foundry releases are created with updates to address code issues, while new
-      stemcells are created with patches for the latest security fixes to address
-      any underlying operating system issues. New Cloud Foundry releases are located
-      at https://github.com/cloudfoundry/cf-release.
-      18F implements the release
-      of Cloud Foundry he what (or the software developer/vendor in the case of software
-      developed and maintained by a vendor/contractor) promptly installs newly released
-      security relevant patches and tests patches, for effectiveness and potential
-      side effects on information systems before installation.
   standard_key: NIST-800-53
 system: 18F
 verifications:
