--- a/SI_Policy/component.yaml
+++ b/SI_Policy/component.yaml
@@ -221,6 +221,24 @@ satisfies:
     text: |
       **DEFAULT_CONTROL** 18F implements [Assignment: organization-defined host-based monitoring mechanisms (Grafana)] at [Assignment: organization-defined information system components(cloud.gov)].
   standard_key: NIST-800-53
+- control_key: SI-5
+  covered_by:
+  - verification_key: POLICY_DOC
+  implementation_status: none
+  narrative:
+    - key: a
+      text: |
+        **DEFAULT_CONTROL** Receives information system security alerts, advisories, and directives from [Assignment: organization-defined external organizations] on an ongoing basis;
+    - key: b
+      text: |
+        **DEFAULT_CONTROL** Generates internal security alerts, advisories, and directives as deemed necessary;
+    - key: c
+      text: |
+        **DEFAULT_CONTROL** Disseminates security alerts, advisories, and directives to: [Selection (one or more): [Assignment: organization-defined personnel or roles]; [Assignment: organization-defined elements within the organization]; [Assignment: organization-defined external organizations]]; and
+    - key: d
+      text: |
+        **DEFAULT_CONTROL** Implements security directives in accordance with established time frames, or notifies the issuing organization of the degree of noncompliance.
+  standard_key: NIST-800-53
 system: 18F
 verifications:
 - key: POLICY_DOC
