Add SI-8 default controls

--- a/SI_Policy/component.yaml
+++ b/SI_Policy/component.yaml
@@ -292,6 +292,22 @@ satisfies:
     text: |
       **DEFAULT_CONTROL** Updates spam protection mechanisms when new releases are available in accordance with organizational configuration management policy and procedures.
   standard_key: NIST-800-53
+- control_key: SI-8 (1)
+  covered_by:
+  - verification_key: POLICY_DOC
+  implementation_status: none
+  narrative:
+  - text: |
+      **DEFAULT_CONTROL** The organization centrally manages spam protection mechanisms.
+  standard_key: NIST-800-53
+- control_key: SI-8 (2)
+  covered_by:
+  - verification_key: POLICY_DOC
+  implementation_status: none
+  narrative:
+  - text: |
+      **DEFAULT_CONTROL** The information system automatically updates spam protection mechanisms.
+  standard_key: NIST-800-53
 system: 18F
 verifications:
 - key: POLICY_DOC
