Add SI-11 default controls

--- a/SI_Policy/component.yaml
+++ b/SI_Policy/component.yaml
@@ -316,6 +316,18 @@ satisfies:
   - text: |
       **DEFAULT_CONTROL** The information system checks the validity of [Assignment: organization-defined information inputs].
   standard_key: NIST-800-53
+- control_key: SI-11
+  covered_by:
+  - verification_key: POLICY_DOC
+  implementation_status: none
+  narrative:
+  - key: a
+    text: |
+      **DEFAULT_CONTROL** Generates error messages that provide information necessary for corrective actions without revealing information that could be exploited by adversaries; and
+  - key: b
+    text: |
+      **DEFAULT_CONTROL** Reveals error messages only to [Assignment: organization-defined personnel or roles].
+  standard_key: NIST-800-53
 system: 18F
 verifications:
 - key: POLICY_DOC
