--- a/AT_Policy/component.yaml
+++ b/AT_Policy/component.yaml
@@ -5,13 +5,15 @@ satisfies:
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
-  narrative: The 18F Program office reviews AT-2
+  narrative:
+    - text: The 18F Program office reviews AT-2
   standard_key: NIST-800-53
 - control_key: AT-1
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
-  narrative: "#### a  \nThe 18F Program Office develops, documents, and disseminates\
+  narrative:
+    - text: "#### a  \nThe 18F Program Office develops, documents, and disseminates\
     \ to all 18F staff\nThe 18F Security Awareness policy which  addresses purpose,\
     \ scope, roles, responsibilities, management commitment, coordination among organizational\
     \ entities, and compliance and procedures to facilitate the implementation of\
@@ -26,24 +28,28 @@ satisfies:
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
-  narrative: The 18F Program office reviews AT-2
+  narrative:
+    - text: The 18F Program office reviews AT-2
   standard_key: NIST-800-53
 - control_key: AT-2 (2)
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
-  narrative: The 18F Program office reviews AT-2
+  narrative:
+    - text: The 18F Program office reviews AT-2
   standard_key: NIST-800-53
 - control_key: AT-4
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
-  narrative: Completed the development of the Awareness training policy specifically
-    for 18F program. ISSO support is looking into possible solutions for specific
-    security awareness training for 18F staff. currently reviewing the SEI training
-    programs for Secure DevOps and Online line Learning management system.
+  narrative:
+    - text: |
+        Completed the development of the Awareness training policy specifically
+        for 18F program. ISSO support is looking into possible solutions for specific
+        security awareness training for 18F staff. currently reviewing the SEI training
+        programs for Secure DevOps and Online line Learning management system.
   standard_key: NIST-800-53
-schema_version: 2.0
+schema_version: 3.0.0
 system: 18F
 verifications:
 - key: POLICY_DOC
